deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romplin-arena
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romplin-arena
  template:
    metadata:
      labels:
        app: romplin-arena
    spec:
      containers:
      - name: romplin-arena
        image: 747147941188.dkr.ecr.us-east-1.amazonaws.com/romplin-arena:latest
        imagePullPolicy: Always   
        env:
        - name: ALLOWED_HOSTS
          valueFrom:
            configMapKeyRef:
              name: django-config
              key: ALLOWED_HOSTS
        ports:
        - containerPort: 8000
