ingress-backup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:747147941188:certificate/53d397d2-f8a5-416f-972d-b0a2e44d1051
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/certificate-arn":"arn:aws:acm:us-east-1:747147941188:certificate/53d397d2-f8a5-416f-972d-b0a2e44d1051","alb.ingress.kubernetes.io/listen-ports":"[{\"HTTPS\":443}, {\"HTTP\":80}]","alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/ssl-redirect":"443","alb.ingress.kubernetes.io/target-type":"ip"},"name":"romplin-arena-ingress","namespace":"default"},"spec": [...]
  creationTimestamp: "2025-01-03T19:36:17Z"
  deletionGracePeriodSeconds: 0
  deletionTimestamp: "2025-01-03T19:51:17Z"
  finalizers:
  - ingress.k8s.aws/resources
  generation: 3
  name: romplin-arena-ingress
  namespace: default
  resourceVersion: "16086934"
  uid: 25f0f970-efdf-4bd6-9d5b-d1d5bd8021fd
spec:
  ingressClassName: alb
  rules:
  - host: romplin-arena.com
    http:
      paths:
      - backend:
          service:
            name: romplin-arena
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
